# filesize-web

./: README.md  azure-pipelines.yml  pyproject.toml  run.sh
.github/workflows/: master_filesize-web.yml
archivesize/: __init__.py  filesize.py
filesize_web/: web.py
tests/: test_filesize_web.py
